tests/enum_into/compile_fail/container/target_is_not_an_enum.rs
use enum_convert::EnumInto;

#[derive(EnumInto)]
#[enum_into(Target)]
enum Source {
    Field(i32),
}

struct Target { // Should be an enum
    Field: i32,
}

fn main() {}
